Final cleanup work
Changed license, removed unnecessary files, updated README.md,
cleaned up comments.

Ready for landing.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "title": "wallpaper",
+  "title": "Shell Wallpapers",
+  "id": "wallpaper@anima-os.com",
   "name": "wallpaper",
   "version": "0.0.1",
   "description": "Wallpapers for about:newtab",
@@ -9,8 +10,9 @@
     "firefox": ">=38.0a1",
     "fennec": ">=38.0a1"
   },
-  "license": "MIT",
+  "license": "BSD-3-Clause",
   "keywords": [
-    "jetpack"
+    "system",
+    "wallpapers"
   ]
 }
