--- a/en-US/wallpaper.properties
+++ b/en-US/wallpaper.properties
@@ -3,5 +3,6 @@
 # This software may be modified and distributed under the terms
 # of the BSD license.  See the LICENSE file for details.
 
-# LOCALIZATION NOTE(wallpaper.option.button): The "Change Wallpaper" label used in the about:newtab option overlay.
+# LOCALIZATION NOTE(wallpaper.option.button): The "Change Wallpaper" label 
+# used in the about:newtab option overlay.
 wallpaper.option.button=Change Wallpaper
